# cv-match

./: .env.example  .gitignore  AGENTS.md  NEXT_PHASE_EXECUTION_PLAN.md  OPC会议备忘录.md  README.md  README.zh-CN.md  RERANK_SERVICE.md  RUNTIME_PHASED_SEARCH_DESIGN.md  TODOS.md  pyproject.toml  tach.toml
.github/workflows/: ci.yml  publish-pypi.yml
.obsidian/: workspace.json
apps/liepin-worker/: package.json  tsconfig.json
apps/web/: package.json  playwright.config.ts  vite.config.ts
apps/web-svelte/: AGENTS.md  README.md  SPIKE_REPORT.md  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
apps/web-user-lite/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
artifacts/runtime/: active.json
docker/prf-model-sidecar/: Dockerfile  compose.yml
docs/: architecture-dependencies.md  architecture.md  cli.md  cli.zh-CN.md  configuration.md  development.md  llm-context-composition.zh-CN.md  outputs.md  ui.md
docs/archive/: README.md  meeting-notes.md
docs/plans/: artifact-schema-slimming.md  roadmap.md
docs/superpowers/: 2026-05-09-multi-source-workbench-execution.md
docs/v-0.1/: design.md
docs/v-0.2/: cts-enum-observations.md  design.md  implementation-checklist.md  llm-context-maps.md  scoring-rules-map.md  workflow-explained.md
docs/v-0.3/: cts-projection-policy.md  deep-research-prompt.md  design.md  evaluation.md  expansion-trace.md  implementation-checklist.md  knowledge-base.md  llm-context-surfaces.md  operator-map.md  operator-spec-style.md  trace-index.md  trace-spec.md  weights-and-thresholds-index.md  workflow-explained.md
docs/v-0.3.1/: cts-projection-policy.md  implementation-checklist.md  llm-context-surfaces.md  operator-spec-style.md  trace-spec.md  weights-and-thresholds-index.md
docs/v-0.3.2/: RUNTIME_SEQUENCE.md  SYSTEM_MODEL.md  trace-index.md
docs/v-0.3.3/: IMPLEMENTATION_OWNERS.md  RUNTIME_SEQUENCE.md  SYSTEM_MODEL.md  SYSTEM_MODEL.notion.md  trace-index.md
experiments/: baseline_evaluation.py
experiments/claude_code_baseline/: cts_mcp.py  harness.py  router.py
experiments/jd_text_baseline/: wandb_logging.py
experiments/openclaw_baseline/: cts_tools.py  docker-compose.yml  harness.py  wandb_logging.py
obsidian/: cts查询api.md
scripts/: build_notion_safe_markdown.py  build_phase6_artifacts.py  replay_tuning.py  start-dev-workbench.sh  verify-dev-workbench.sh
tests/: settings_factory.py  test_api.py  test_artifact_path_contract.py  test_artifact_store.py  test_bootstrap.py  test_bootstrap_assets.py  test_bootstrap_llm.py  test_bootstrap_ops.py  test_candidate_feedback.py  test_candidate_feedback_bakeoff.py  test_candidate_feedback_familying.py  test_candidate_feedback_span_models.py  test_candidate_projection.py  test_claude_code_baseline.py  test_cli.py  test_cli_packaging.py  test_company_discovery.py  test_context_builder.py  test_controller_contract.py  test_controller_llm.py  test_corpus_runtime.py  test_corpus_store.py  test_cts_client.py  test_cts_provider_adapter.py  test_dev_mode_readiness.py  test_dokobot_capabilities.py  test_evaluation.py  test_exact_llm_cache.py  test_experiment_entrypoints.py  test_filter_projection.py  test_finalizer_contract.py  test_flywheel_datasets.py  test_flywheel_runtime.py  test_flywheel_store.py  test_frontier_ops.py  test_jd_text_baseline.py  test_liepin_api_scope.py  test_liepin_boundaries.py  test_liepin_card_policy.py  test_liepin_cli.py  (+82 more)
tools/: audit_run_latency.py  check_arch_imports.py  check_pi_agent_boundaries.py  probe_bailian_structured_output.py  run_global_benchmark.py
(+693 files in other folders)
