[project]
name = "seektalent"
version = "0.3.0a1"
description = "Local v0.3 phase-5 runtime loop for resume search"
readme = "README.md"
license = { text = "GNU Affero General Public License v3.0" }
authors = [
    { name = "frankqdwang", email = "wang15850317595@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "pydantic-ai>=1.76.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
rerank = [
    "mlx>=0.31.1",
    "mlx-lm>=0.31.1",
]

[project.scripts]
seektalent = "seektalent.cli:main"
seektalent-rerank-api = "seektalent_rerank.server:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["seektalent", "seektalent_rerank"]

[tool.pytest.ini_options]
pythonpath = ["src"]
