[project]
name = "seektalent"
version = "0.6.1"
description = "Local CLI Agent for deterministic multi-round resume matching with Pydantic AI"
readme = "README.md"
license = { text = "GNU Affero General Public License v3.0" }
authors = [
    { name = "frankqdwang", email = "wang15850317595@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.0",
    "pydantic-ai-slim[openai]>=1.76.0",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "wandb>=0.23.0",
    "wandb-workspaces>=0.3.9",
    "weave>=0.52.36",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "tach>=0.34.1",
    "ty>=0.0.31",
]

[project.scripts]
seektalent = "seektalent.cli:main"
seektalent-ui-api = "seektalent_ui.server:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-select = ["BLE001", "S110", "S112", "TRY203"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true
